--- a/app/views/info.scala.html
+++ b/app/views/info.scala.html
@@ -1,16 +1,34 @@
-@(chapter: Chapter)
+
+@import scala.collection.mutable
+@(path: String,
+        fullName: String,
+        text: String,
+        childrenList: mutable.MutableList[String])(implicit messages:Messages,request: RequestHeader, messagesProvider: MessagesProvider)
+
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    @* Here's where we render the page title `String`. *@
-    <title>title</title>
-    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-    <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-    <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
-  </head>
-  <body>
-    @* And here's where we render the `Html` object containing
-    * the page content. *@
-  </body>
+    <head>
+        @* Here's where we render the page title `String`. *@
+        <title>@fullName</title>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
+    </head>
+    <body>
+
+        <ul>Путь: @path</ul>
+        <ul>Название: @fullName</ul>
+        <ul>текст: @text</ul>
+        <ul>Список входящих глав и статей:</ul>
+        @if(childrenList != null){
+            @for(c <- childrenList){
+                <ul>@c</ul>
+            }
+        }
+
+        @* And here's where we render the `Html` object containing
+        * the page content. *@
+
+    </body>
 </html>
